--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,31 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+    <style name="AppTheme" parent="android:Theme.Holo">
+        <item name="android:datePickerStyle">@style/DatePicker</item>
+        <item name="android:textViewStyle">@style/DatePicker</item>
+    </style>
+
+    <style name="timePicker" parent="android:Theme.Holo.Light">
+        <item name="android:textColor">#FFFF</item>
+        <item name="android:divider">@color/border_color</item>
+        <item name="android:dividerHeight">1px</item>
+        <item name="android:dividerHorizontal">@color/border_color</item>
+    </style>
+
+    <style name="MyApp.NumberPicker" parent="android:Widget.DatePicker">
+        <item name="android:divider">@color/border_color</item>
+    </style>
+
+
+    <style name="buttonStyle" >
+        <item name="android:layout_width" >fill_parent</item>
+        <item name="android:layout_height" >wrap_content</item>
+        <item name="android:textColor" >#ffffff</item>
+        <item name="android:gravity" >center</item>
+        <item name="android:layout_margin" >3dp</item>
+        <item name="android:textSize" >20dp</item>
+        <item name="android:shadowRadius" >2</item>
     </style>
 
 </resources>
