--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -103,7 +103,21 @@
           />
 
     </RadioGroup>
-
+<!--
+    <com.dlazaro66.qrcodereaderview.QRCodeReaderView
+        android:id="@+id/qrdecoderview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true" />
+    <ImageView
+        android:id="@+id/red_line_image"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/qrdecoderview"
+        android:src="@drawable/amit" />
+-->
     <Button
         style="@style/buttonStyle"
         android:paddingLeft="20dp"
@@ -111,6 +125,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Save"
+        android:onClick="save"
         android:id="@+id/save"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
