--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,21 +9,83 @@
 
 
     <TextView
+        android:textSize="20dp"
+        android:textColor="#E5E3DF"
+        android:layout_margin="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Medium Text"
-        android:id="@+id/textView"
+        android:text="Login ID "
+        android:id="@+id/loginIDTV"
+        android:layout_above="@+id/passwordTV"
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
     <EditText
+        android:textSize="20dp"
+        android:layout_margin="10dp"
+        android:textColor="#02233C"
+        android:background="#E5E3DF"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/editText"
+        android:id="@+id/loginIDET"
+        android:text=""
+        android:width="150dp"
+        android:layout_toRightOf="@+id/passwordTV"
         android:layout_centerVertical="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_above="@+id/passwordTV"
+         />
+
+
+    <TextView
+        android:textSize="20dp"
+        android:textColor="#E5E3DF"
+        android:layout_margin="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Password "
+        android:id="@+id/passwordTV"
+        android:layout_above="@+id/firstHLine"
+        />
+
+    <EditText
+        android:textSize="20dp"
+        android:layout_margin="10dp"
+        android:textColor="#02233C"
+        android:background="#E5E3DF"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/passwordET"
+        android:inputType="textPassword"
+        android:text=""
+        android:width="150dp"
+        android:layout_toRightOf="@+id/passwordTV"
+        android:layout_above="@+id/firstHLine"
+        />
+
+    <View
+        android:layout_above="@+id/loginBUTTON"
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="40dp"
+        android:id="@+id/firstHLine"
+        android:layout_marginBottom="40dp"
+        android:background="#E5E3DF"/>
+
+    <Button
+        android:onClick="login"
+        android:textSize="20dp"
+        android:layout_marginBottom="30dp"
+        android:textColor="#02233C"
+        android:background="#E5E3DF"
+        android:width="150dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Login"
+        android:id="@+id/loginBUTTON"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
