--- a/app/src/main/res/layout/activity_scan.xml
+++ b/app/src/main/res/layout/activity_scan.xml
@@ -8,7 +8,17 @@
     tools:context="com.vaiotech.attendaceapp.ScanActivity">
 
 
+    <FrameLayout
+        android:id="@+id/cameraPreview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        >
+    </FrameLayout>
+
     <ImageView
+        android:layout_marginLeft="5dp"
+        android:background="#E5E3DF"
         android:layout_width="130dp"
         android:layout_height="130dp"
         android:id="@+id/companyLOGOIV"
@@ -17,6 +27,7 @@
         android:layout_alignParentStart="true" />
 
     <TextView
+        android:layout_marginLeft="10dp"
         android:textSize="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -27,16 +38,29 @@
         />
 
     <TextView
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:textSize="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="kanaiyalal"
+        android:text="0120523"
         android:id="@+id/companyAdminCodeTV"
         android:layout_toRightOf="@+id/companyLOGOIV"
         android:layout_below="@+id/companyAdminNameTV"
         />
 
-
+    <Button
+        android:onClick="scan"
+        android:textSize="20dp"
+        android:layout_marginBottom="30dp"
+        android:textColor="#02233C"
+        android:background="#E5E3DF"
+        android:width="150dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Scan"
+        android:id="@+id/button"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
