--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,12 +9,11 @@
 
 
     <TextView
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textColor="#E5E3DF"
         android:layout_margin="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Login ID "
         android:id="@+id/loginIDTV"
         android:layout_above="@+id/passwordTV"
@@ -23,14 +22,13 @@
         android:layout_alignParentStart="true" />
 
     <EditText
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:layout_margin="10dp"
         android:textColor="#02233C"
         android:background="#E5E3DF"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/loginIDET"
-        android:text=""
         android:width="150dp"
         android:layout_toRightOf="@+id/passwordTV"
         android:layout_centerVertical="true"
@@ -39,19 +37,18 @@
 
 
     <TextView
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textColor="#E5E3DF"
         android:layout_margin="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Password "
         android:id="@+id/passwordTV"
         android:layout_above="@+id/firstHLine"
         />
 
     <EditText
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:layout_margin="10dp"
         android:textColor="#02233C"
         android:background="#E5E3DF"
@@ -59,7 +56,6 @@
         android:layout_height="wrap_content"
         android:id="@+id/passwordET"
         android:inputType="textPassword"
-        android:text=""
         android:width="150dp"
         android:layout_toRightOf="@+id/passwordTV"
         android:layout_above="@+id/firstHLine"
@@ -77,7 +73,7 @@
     <Button
         android:onClick="login"
         android:layout_marginBottom="30dp"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textColor="#02233C"
         android:background="#E5E3DF"
         android:width="150dp"
