--- a/app/src/main/res/layout/activity_scan.xml
+++ b/app/src/main/res/layout/activity_scan.xml
@@ -17,6 +17,7 @@
     </FrameLayout>
 
     <ImageView
+        android:layout_marginTop="10dp"
         android:layout_marginLeft="5dp"
         android:background="#E5E3DF"
         android:layout_width="130dp"
@@ -27,20 +28,20 @@
         android:layout_alignParentStart="true" />
 
     <TextView
+        android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="kanaiyalal"
         android:id="@+id/companyAdminNameTV"
-        android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/companyLOGOIV"
         />
 
     <TextView
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0120523"
@@ -51,7 +52,7 @@
 
     <Button
         android:onClick="scan"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:layout_marginBottom="30dp"
         android:textColor="#02233C"
         android:background="#E5E3DF"
@@ -59,7 +60,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Scan"
-        android:id="@+id/button"
+        android:id="@+id/scanBUTTON"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
