--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -91,4 +91,55 @@
         android:layout_alignParentBottom="true"
          />
 
+    <TextView
+        android:textSize="20sp"
+        android:textColor="#E5E3DF"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Time"
+        android:id="@+id/timeTV"
+        android:layout_toLeftOf="@+id/hhET"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="15dp"
+     />
+
+    <EditText
+        android:gravity="center"
+        android:width="30dp"
+        android:textColor="#02233C"
+        android:background="#E5E3DF"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/hhET"
+        android:text="21"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+         />
+
+    <TextView
+        android:textSize="20sp"
+        android:textColor="#E5E3DF"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=":"
+        android:layout_centerVertical="true"
+        android:id="@+id/seperateTimeTV"
+        android:layout_toRightOf="@+id/hhET"
+        android:textStyle="bold" />
+
+    <EditText
+        android:gravity="center"
+        android:width="30dp"
+        android:textColor="#02233C"
+        android:background="#E5E3DF"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/mmET"
+        android:text="21"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@+id/seperateTimeTV"
+        />
+
 </RelativeLayout>
