--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -59,38 +59,6 @@
         android:layout_toRightOf="@+id/personLOGOIV"
         android:layout_below="@+id/personIDTV" />
 
-    <Button
-        android:layout_alignParentStart="true"
-        android:layout_margin="20dp"
-        android:textSize="20sp"
-        android:textColor="#02233C"
-        android:background="#E5E3DF"
-        android:width="100dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="In Time"
-        android:onClick="save"
-        android:id="@+id/inBUTTON"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
-        />
-
-    <Button
-        android:layout_margin="20dp"
-        android:textSize="20sp"
-        android:textColor="#02233C"
-        android:background="#E5E3DF"
-        android:width="100dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Out Time"
-        android:onClick="save"
-        android:id="@+id/outBUTTON"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-         />
-
     <TextView
         android:textSize="20sp"
         android:textColor="#E5E3DF"
@@ -101,20 +69,23 @@
         android:layout_toLeftOf="@+id/hhET"
         android:layout_centerVertical="true"
         android:layout_marginRight="15dp"
-     />
+        />
 
     <EditText
+        android:textStyle="bold"
+        android:textSize="20sp"
         android:gravity="center"
-        android:width="30dp"
+        android:width="40dp"
         android:textColor="#02233C"
         android:background="#E5E3DF"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/hhET"
         android:text="21"
+        android:maxLength="2"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-         />
+        />
 
     <TextView
         android:textSize="20sp"
@@ -130,8 +101,11 @@
         android:textStyle="bold" />
 
     <EditText
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:maxLength="2"
         android:gravity="center"
-        android:width="30dp"
+        android:width="40dp"
         android:textColor="#02233C"
         android:background="#E5E3DF"
         android:layout_width="wrap_content"
@@ -141,5 +115,47 @@
         android:layout_centerVertical="true"
         android:layout_toRightOf="@+id/seperateTimeTV"
         />
+
+    <View
+        android:layout_above="@+id/inBUTTON"
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:id="@+id/firstHLine"
+        android:layout_marginBottom="20dp"
+        android:background="#E5E3DF"/>
+
+    <Button
+        android:layout_alignParentStart="true"
+        android:layout_margin="30dp"
+        android:textSize="20sp"
+        android:textColor="#02233C"
+        android:background="#E5E3DF"
+        android:width="100dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="In Time"
+        android:onClick="save"
+        android:id="@+id/inBUTTON"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        />
+
+    <Button
+        android:layout_margin="30dp"
+        android:textSize="20sp"
+        android:textColor="#02233C"
+        android:background="#E5E3DF"
+        android:width="100dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Out Time"
+        android:onClick="save"
+        android:id="@+id/outBUTTON"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+         />
+
+
 
 </RelativeLayout>
