--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,62 +6,23 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="#02233C"
+    android:background="#B9C6ED"
     tools:context=".HomeActivity">
 
-    <ImageView
-        android:background="#E5E3DF"
-        android:layout_width="130dp"
-        android:layout_height="130dp"
-        android:id="@+id/personLOGOIV"
+    <TextView
+        android:textSize="80sp"
+        android:textColor="#021C68"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="0"
+        android:id="@+id/counter"
+        android:layout_centerHorizontal="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-
-    <TextView
-        android:layout_toEndOf="@+id/personLOGOIV"
-        android:layout_marginLeft="5dp"
-        android:textSize="20sp"
-        android:textColor="#E5E3DF"
-        android:paddingTop="10dp"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Person Name"
-        android:id="@+id/personNameTV"
-        android:layout_toRightOf="@+id/personLOGOIV" />
-
-    <TextView
-        android:layout_toEndOf="@+id/personLOGOIV"
-        android:textSize="20sp"
-        android:layout_marginLeft="5dp"
-        android:textColor="#E5E3DF"
-        android:paddingTop="10dp"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Person ID"
-        android:id="@+id/personIDTV"
-        android:layout_toRightOf="@+id/personLOGOIV"
-        android:layout_below="@+id/personNameTV" />
-
-    <TextView
-        android:layout_toEndOf="@+id/personLOGOIV"
-        android:textSize="20sp"
-        android:layout_marginLeft="5dp"
-        android:textColor="#E5E3DF"
-        android:paddingTop="10dp"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Department"
-        android:id="@+id/personDeptTV"
-        android:layout_toRightOf="@+id/personLOGOIV"
-        android:layout_below="@+id/personIDTV" />
+        />
 
     <TextView
         android:textSize="40sp"
-        android:textColor="#E5E3DF"
+        android:textColor="#021C68"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Time"
@@ -89,7 +50,7 @@
 
     <TextView
         android:textSize="45sp"
-        android:textColor="#E5E3DF"
+        android:textColor="#021C68"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:layout_width="wrap_content"
@@ -128,8 +89,8 @@
         android:layout_alignParentStart="true"
         android:layout_margin="30dp"
         android:textSize="20sp"
-        android:textColor="#02233C"
-        android:background="#E5E3DF"
+        android:textColor="#B9C6ED"
+        android:background="#021C68"
         android:width="100dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -143,8 +104,8 @@
     <Button
         android:layout_margin="30dp"
         android:textSize="20sp"
-        android:textColor="#02233C"
-        android:background="#E5E3DF"
+        android:textColor="#B9C6ED"
+        android:background="#021C68"
         android:width="100dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
