--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,11 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
-        android:background="#02233C"
+        android:background="#B9C6ED"
         tools:context="com.vaiotech.attendaceapp.MainActivity">
 
        <TextView
+           android:textColor="#550000"
            android:id="@+id/adminName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
@@ -27,9 +28,10 @@
             android:orientation="vertical"
             >
             <Button
+                android:textSize="30dp"
                 android:layout_margin="5dp"
-                android:textColor="#02233C"
-                android:background="#E5E3DF"
+                android:textColor="#ffffff"
+                android:background="#550000"
                 android:onClick="scanQRCode"
                 android:id="@+id/button1"
                 android:layout_width="match_parent"
@@ -37,9 +39,10 @@
                 android:layout_weight="1"
                 android:text="QR Code Scanner"/>
             <Button
+                android:textSize="30dp"
                 android:layout_margin="5dp"
-                android:textColor="#02233C"
-                android:background="#E5E3DF"
+                android:textColor="#ffffff"
+                android:background="#550000"
                 android:onClick="scanCard"
                 android:id="@+id/button2"
                 android:layout_width="match_parent"
@@ -47,9 +50,10 @@
                 android:layout_weight="1"
                 android:text="Electornic Card Scanner"/>
             <Button
+                android:textSize="30dp"
                 android:layout_margin="5dp"
-                android:textColor="#02233C"
-                android:background="#E5E3DF"
+                android:textColor="#ffffff"
+                android:background="#550000"
                 android:onClick="scanVoice"
                 android:id="@+id/button3"
                 android:layout_width="match_parent"
