--- a/app/src/main/res/layout/activity_scan.xml
+++ b/app/src/main/res/layout/activity_scan.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="#02233C"
+    android:background="#B9C6ED"
     tools:context="com.vaiotech.attendaceapp.ScanActivity">
 
 
@@ -12,43 +12,8 @@
         android:id="@+id/cameraPreview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        >
+    >
     </FrameLayout>
-
-    <ImageView
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="5dp"
-        android:background="#E5E3DF"
-        android:layout_width="130dp"
-        android:layout_height="130dp"
-        android:id="@+id/companyLOGOIV"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:textSize="20sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="kanaiyalal"
-        android:id="@+id/companyAdminNameTV"
-        android:layout_toRightOf="@+id/companyLOGOIV"
-        />
-
-    <TextView
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:textSize="20sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="0120523"
-        android:id="@+id/companyAdminCodeTV"
-        android:layout_toRightOf="@+id/companyLOGOIV"
-        android:layout_below="@+id/companyAdminNameTV"
-        />
 
     <Button
         android:onClick="scan"
