--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,13 +4,13 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="#B9C6ED"
+    android:background="#AFEEEE"
     tools:context="com.vaiotech.attendaceapp.LoginActivity">
 
 
     <TextView
         android:textSize="20sp"
-        android:textColor="#021C68"
+        android:textColor="#030909"
         android:layout_margin="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -24,8 +24,8 @@
     <EditText
         android:textSize="20sp"
         android:layout_margin="10dp"
-        android:textColor="#ffffff"
-        android:background="#021C68"
+        android:textColor="#00E9E9"
+        android:background="#454B4B"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/loginIDET"
@@ -38,7 +38,7 @@
 
     <TextView
         android:textSize="20sp"
-        android:textColor="#021C68"
+        android:textColor="#030909"
         android:layout_margin="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -50,8 +50,8 @@
     <EditText
         android:textSize="20sp"
         android:layout_margin="10dp"
-        android:textColor="#ffffff"
-        android:background="#021C68"
+        android:textColor="#00E9E9"
+        android:background="#454B4B"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/passwordET"
@@ -68,14 +68,14 @@
         android:layout_marginTop="40dp"
         android:id="@+id/firstHLine"
         android:layout_marginBottom="40dp"
-        android:background="#550000"/>
+        android:background="#00E9E9"/>
 
     <Button
         android:onClick="login"
         android:layout_marginBottom="30dp"
         android:textSize="20sp"
-        android:textColor="#ffffff"
-        android:background="#021C68"
+        android:textColor="#00E9E9"
+        android:background="#454B4B"
         android:width="150dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
