--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,22 +9,27 @@
         android:background="#B9C6ED"
         tools:context="com.vaiotech.attendaceapp.MainActivity">
 
-       <TextView
-           android:textColor="#550000"
-           android:id="@+id/adminName"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
+       <LinearLayout
+           android:id="@+id/linearOne"
            android:layout_alignParentTop="true"
-           android:text="Kanaiyalal Thacker"
-           android:gravity="center"
-           android:textSize="30dp"
-           android:layout_marginBottom="10dp"
-       />
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content">
+           <TextView
+               android:textColor="#550000"
+               android:id="@+id/adminName"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:text="Kanaiyalal Thacker"
+               android:gravity="center"
+               android:textSize="30dp"
+           />
+       </LinearLayout>
         <LinearLayout
-            android:layout_below="@+id/adminName"
+            android:layout_above="@+id/linerTwo"
+            android:layout_below="@+id/linearOne"
             android:id="@+id/liner"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:orientation="vertical"
             >
             <Button
@@ -61,6 +66,33 @@
                 android:layout_weight="1"
                 android:text="Voice Scanner"/>
         </LinearLayout>
+       <LinearLayout
+           android:layout_alignParentBottom="true"
+           android:id="@+id/linerTwo"
+           android:layout_width="fill_parent"
+           android:layout_height="wrap_content"
+           android:orientation="vertical"
+           >
+           <RadioGroup
+               android:orientation="horizontal"
+               android:layout_width="fill_parent"
+               android:layout_height="wrap_content">
+
+               <RadioButton
+                   android:layout_weight="1"
+                   android:text="Single Scane"
+                   android:layout_width="0dp"
+                   android:layout_height="wrap_content" />
+
+               <RadioButton
+                   android:layout_weight="1"
+                   android:text="Batch Scan"
+                   android:layout_width="0dp"
+                   android:layout_height="wrap_content" />
+
+           </RadioGroup>
+        </LinearLayout>
+
     </RelativeLayout>
 
 
