--- a/app/src/main/res/layout/activity_scan_card_batch.xml
+++ b/app/src/main/res/layout/activity_scan_card_batch.xml
@@ -6,19 +6,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="#87CEEB"
-    tools:context=".HomeActivity">
-
-    <TextView
-        android:textSize="80sp"
-        android:textColor="#021C68"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="1"
-        android:id="@+id/counter"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentTop="true"
-        />
+    android:background="#B2DFEE"
+    tools:context="com.vaiotech.attendaceapp.ScanCardBatchActivity">
 
     <TextView
         android:textSize="40sp"
@@ -27,10 +16,9 @@
         android:layout_height="wrap_content"
         android:text="Time"
         android:id="@+id/timeTV"
+        android:layout_alignParentTop="true"
         android:layout_toLeftOf="@+id/hhET"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="15dp"
-        />
+    />
 
     <EditText
         android:inputType="number"
@@ -38,15 +26,15 @@
         android:textSize="45sp"
         android:gravity="center"
         android:width="40dp"
-        android:textColor="#E81B11"
-        android:background="#080807"
+        android:textColor="#00E9E9"
+        android:background="#454B4B"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/hhET"
         android:maxLength="2"
-        android:layout_centerVertical="true"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        />
+    />
 
     <TextView
         android:textSize="45sp"
@@ -56,7 +44,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=":"
-        android:layout_centerVertical="true"
         android:id="@+id/seperateTimeTV"
         android:layout_toRightOf="@+id/hhET"
         android:textStyle="bold" />
@@ -68,22 +55,49 @@
         android:maxLength="2"
         android:gravity="center"
         android:width="40dp"
-        android:textColor="#E81B11"
-        android:background="#080807"
+        android:textColor="#00E9E9"
+        android:background="#454B4B"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/mmET"
-        android:layout_centerVertical="true"
         android:layout_toRightOf="@+id/seperateTimeTV"
         />
 
+    <TextView
+        android:layout_marginTop="10dp"
+        android:text="0"
+        android:textStyle="bold"
+        android:textSize="100sp"
+        android:gravity="center"
+        android:textColor="#00E9E9"
+        android:background="#454B4B"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/counterValTV"
+        android:layout_below="@+id/mmET"
+        android:layout_centerHorizontal="true"
+        />
+
+    <TextView
+        android:layout_marginTop="5dp"
+        android:text="Current count"
+        android:textSize="20sp"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/counterLableTV"
+        android:layout_below="@+id/counterValTV"
+        android:layout_centerHorizontal="true"
+        />
+
     <View
-        android:layout_above="@+id/inBUTTON"
+        android:layout_below="@+id/counterLableTV"
         android:layout_width="fill_parent"
         android:layout_height="1dp"
         android:id="@+id/firstHLine"
-        android:layout_marginBottom="20dp"
-        android:background="#E5E3DF"/>
+        android:layout_marginBottom="10dp"
+        android:background="#550000"/>
 
     <Button
         android:layout_alignParentStart="true"
@@ -115,8 +129,6 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-         />
-
-
+        />
 
 </RelativeLayout>
