--- a/app/src/main/res/layout/activity_scan_card_single.xml
+++ b/app/src/main/res/layout/activity_scan_card_single.xml
@@ -6,30 +6,18 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="#87CEEB"
-    tools:context=".HomeActivity">
-
-    <TextView
-        android:textSize="80sp"
-        android:textColor="#021C68"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="1"
-        android:id="@+id/counter"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentTop="true"
-        />
+    android:background="#B2DFEE"
+    tools:context="com.vaiotech.attendaceapp.ScanCardSingleActivity">
 
     <TextView
         android:textSize="40sp"
-        android:textColor="#021C68"
+        android:textColor="#344152"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Time"
         android:id="@+id/timeTV"
+        android:layout_alignParentTop="true"
         android:layout_toLeftOf="@+id/hhET"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="15dp"
         />
 
     <EditText
@@ -38,13 +26,13 @@
         android:textSize="45sp"
         android:gravity="center"
         android:width="40dp"
-        android:textColor="#E81B11"
-        android:background="#080807"
+        android:textColor="#00E9E9"
+        android:background="#344152"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/hhET"
         android:maxLength="2"
-        android:layout_centerVertical="true"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         />
 
@@ -56,7 +44,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=":"
-        android:layout_centerVertical="true"
         android:id="@+id/seperateTimeTV"
         android:layout_toRightOf="@+id/hhET"
         android:textStyle="bold" />
@@ -68,22 +55,58 @@
         android:maxLength="2"
         android:gravity="center"
         android:width="40dp"
-        android:textColor="#E81B11"
-        android:background="#080807"
+        android:textColor="#00E9E9"
+        android:background="#344152"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/mmET"
-        android:layout_centerVertical="true"
         android:layout_toRightOf="@+id/seperateTimeTV"
         />
 
     <View
-        android:layout_above="@+id/inBUTTON"
+        android:layout_margin="10dp"
+        android:layout_below="@+id/mmET"
         android:layout_width="fill_parent"
         android:layout_height="1dp"
         android:id="@+id/firstHLine"
-        android:layout_marginBottom="20dp"
-        android:background="#E5E3DF"/>
+        android:layout_marginBottom="10dp"
+        android:background="#000000"/>
+
+    <TextView
+        android:layout_below="@+id/firstHLine"
+        android:layout_marginLeft="20dp"
+        android:textSize="20sp"
+        android:textColor="#344152"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Id : "
+        android:id="@+id/cardIdLableTV"
+    />
+
+    <TextView
+        android:layout_toRightOf="@+id/cardIdLableTV"
+        android:layout_below="@+id/firstHLine"
+        android:textSize="20sp"
+        android:textColor="#344152"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="12456789"
+        android:id="@+id/cardIdValueTV"
+        />
+
+    <Button
+        android:layout_centerHorizontal="true"
+        android:textSize="20sp"
+        android:textColor="#B9C6ED"
+        android:background="#021C68"
+        android:width="100dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Get Info"
+        android:onClick="save"
+        android:id="@+id/getInfoBUTTON"
+        android:layout_above="@+id/inBUTTON"
+        />
 
     <Button
         android:layout_alignParentStart="true"
@@ -115,8 +138,5 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-         />
-
-
-
+        />
 </RelativeLayout>
