--- a/app/src/main/res/layout/activity_scan_card_single.xml
+++ b/app/src/main/res/layout/activity_scan_card_single.xml
@@ -25,7 +25,7 @@
         android:textColor="#512500"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="1"
+        android:text=""
         android:id="@+id/idValueTV"
         android:layout_toRightOf="@+id/idLableTV"
         android:layout_alignParentTop="true"
