--- a/app/src/main/res/layout/activity_scan.xml
+++ b/app/src/main/res/layout/activity_scan.xml
@@ -10,8 +10,8 @@
 
     <FrameLayout
         android:id="@+id/cameraPreview"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
     >
     </FrameLayout>
 
